# heimdall

./: README.md  SETUP.md  pyproject.toml
console/: middleware.ts  package-lock.json  package.json
console/app/: globals.css  layout.tsx  page.tsx
console/components/: DemoSignIn.tsx  ui.tsx
console/lib/: data.ts  view.ts
console/supabase/: schema.sql
examples/: README.md  run_all.sh
heimdall/: __init__.py  agentrun.py  audit.py  budget.py  catalog.py  claims.py  engine.py  gateway.py  generator.py  governance.py  grounding.py  ingest.py  llm.py  mcp_client.py  observability.py  policy.py  publisher.py  reconstruct.py  roster.py  select.py  snapshot.py  trust.py  writeback.py
scripts/: audit_session.py  backdate_probe.py  external_agent.py  gateway_e2e.py  ground_session.py  ingest_gc_proof.py  ingest_world.py  leaderboard_session.py  observe_session.py  policy_session.py  prov_probe.py  prove_agnostic.py  publish_proof.py  publish_scoreboard.py  publish_snapshot.py  recon_probe.py  run_agents_demo.py  run_blast_demo.py  run_governance_demo.py  run_writeback.py  score_session.py  smoke_mcp.py  tick_llm_proof.py  tick_proof.py
tests/: test_agentrun.py  test_agents.py  test_audit.py  test_budget.py  test_catalog.py  test_claims.py  test_engine.py  test_gateway.py  test_generator.py  test_governance.py  test_grounding.py  test_ingest.py  test_meta.py  test_observability.py  test_policy.py  test_provenance.py  test_publisher.py  test_reconstruct.py  test_roster.py  test_select.py  test_settle.py  test_simulator.py  test_skill.py  test_trust.py  test_writeback.py
(+13 files in other folders)
